--- a/package.json
+++ b/package.json
@@ -10,8 +10,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "aws-sdk": "^2.4.6",
     "body-parser": "^1.15.2",
+    "dotenv": "^2.0.0",
     "express": "^4.14.0",
+    "lodash": "^4.13.1",
+    "multer": "^1.1.0",
+    "multer-s3": "^2.3.2",
+    "ng-file-upload": "^12.0.4",
     "path": "^0.12.7",
     "pg": "^6.0.2"
   }
