add style to home but upload picture broken

--- a/package.json
+++ b/package.json
@@ -10,7 +10,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "angular": "^1.5.7",
+    "angular-animate": "^1.5.7",
+    "angular-aria": "^1.5.7",
     "angular-checkboxes": "^1.0.2",
+    "angular-material": "^1.1.0-rc.5",
     "aws-sdk": "^2.4.6",
     "body-parser": "^1.15.2",
     "checklist-model": "^0.10.0",
